apps/editorial_features/components/eoy/stylesheets/index.styl
@require './scroller'
@require './body'

flex-display(justify = space-between, align = center)
  display flex
  justify-content justify
  align-items align

.eoy-feature
  &__background
    position fixed
    top 49.9%
    left 50%
    min-height 101vh
    min-width 100vw
    transform translate(-50%, -50%)
    z-index -1
    opacity 0
    &.active
      opacity 1
  &__menu
    position fixed
    top 0
    left 0
    right 0
    margin 0 40px
    height 75px
    border-bottom 1px solid white
    z-index 100
    flex-display(flex-start)
    align-items center
    img.logo
      height 30px
    img.ubs
      height 25px
      display inline-block
      color white
    a:not(.article-sa-artsy-logo)
      color white
      text-decoration none
      font-size 14px
      font-weight 600
      span
        display inline-block
        line-height 15px
        margin-right 12px
        vertical-align middle
    .article-sa-artsy-logo
      color white
      font-size 32px
    .article-sa-plus
      color white
    a.back-to-magazine
      color white
      avant-garde-size('body')
      margin-left auto
  &__sa-header
    .mgr-cell
      margin-right 0px
    .article-sa-sticky-left
      left 40px
    .article-sa-sticky-right
      right 35px
      .article-sa-primary-logo img
        height 30px
    .article-sa-sticky__presented
      margin-right 12px
  video[poster]
    height 100%
    background-size cover
    background-repeat no-repeat
    background-position center

@media screen and (max-width: 550px)
  .eoy-feature__menu
    margin 0 10px
    justify-content flex-start
    .ubs
      margin-top 13px
    a.ubs-link span
      display none
    .article-sa-plus
      display inline-block
      font-size 12px
    a.back-to-magazine
      avant-garde-size('s-headline')
@media screen and (max-width: 900px)
  .eoy-feature__sa-header
    .article-sa-sticky-left
      left 20px

